--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
 </head>
 <body>
 <header class="header">
-    <div class="logo-box">
-        <img src="img/logo.jpg" alt="Logo" class="logo">
+    <div class="header__logo-box">
+        <img src="img/logo.jpg" alt="Logo" class="header__logo">
     </div>
-    <div class="text-box">
+
+    <div class="header__text-box">
         <h1 class="heading-primary">
-            <span class="heading-primary-main">Outdoors</span>
-            <span class="heading-primary-sub">is where life happens</span>
+            <span class="heading-primary--main">Outdoors</span>
+            <span class="heading-primary--sub">is where life happens</span>
         </h1>
-        <a href="#" class="btn btn-white">discover our tour</a>
+
+        <a href="#" class="btn btn--white btn--animated">discover our tour</a>
     </div>
 </header>
-
 </body>
 </html>
