--- a/index.html
+++ b/index.html
@@ -22,7 +22,44 @@
         <a href="#" class="btn btn--white btn--animated">discover our tour</a>
     </div>
 </header>
-<section class="gird-test">
+<main>
+    <section class="section-about">
+        <div class="u-center-text u-margin-bottom-big">
+            <h2 class="heading-secondary">
+                Exciting tours for adventurous people
+            </h2>
+        </div>
+        <div class="row">
+            <div class="col-1-of-2">
+                <h3 class="heading-tertiary u-margin-bottom-small">
+                    You're going to fall in love with nature
+                </h3>
+                <p class="paragraph">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda aut beatae consequatur delectus
+                    error, esse facere minus molestiae nesciunt nisi nulla officia quia quidem sapiente, similique
+                    soluta ut, velit voluptate.
+                </p>
+                <h3 class="heading-tertiary u-margin-bottom-small">
+                    Live adventure like you never have before
+                </h3>
+                <p class="paragraph">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto blanditiis commodi culpa cumque
+                    cupiditate earum exercitationem labore magnam molestias nesciunt nihil, officia possimus quae
+                    quaerat quas quis similique velit veniam!
+                </p>
+                <a href="#" class="btn-text">Learn more &rarr;</a>
+            </div>
+            <div class="col-1-of-2">
+                <div class="composition">
+                    <img src="img/nat-1-large.jpg" alt="photo 1" class="composition__photo composition__photo--p1">
+                    <img src="img/nat-2-large.jpg" alt="photo 2" class="composition__photo composition__photo--p2">
+                    <img src="img/nat-3-large.jpg" alt="photo 3" class="composition__photo composition__photo--p3">
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
+<!--<section class="gird-test">
     <div class="row">
         <div class="col-1-of-2">
             Col 1 of 2
@@ -83,6 +120,6 @@
             Col 3 of 4
         </div>
     </div>
-</section>
+</section>-->
 </body>
 </html>
