--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover">
+    <link rel="stylesheet" href="css/icon-font.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/favicon.ico">
     <title>Natours</title>
@@ -55,6 +56,65 @@
                     <img src="img/nat-2-large.jpg" alt="photo 2" class="composition__photo composition__photo--p2">
                     <img src="img/nat-3-large.jpg" alt="photo 3" class="composition__photo composition__photo--p3">
                 </div>
+            </div>
+        </div>
+    </section>
+    <section class="section-features">
+        <div class="row">
+            <div class="col-1-of-4">
+                <div class="features-box">
+                    <i class="features-box__icon icon-basic-world"></i>
+                    <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
+                    <p class="features-box__text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium adipisci asperiores,
+                        culpa dolorem eaque
+                </div>
+            </div>
+            <div class="col-1-of-4">
+                <div class="features-box">
+                    <i class="features-box__icon icon-basic-compass"></i>
+                    <h3 class="heading-tertiary u-margin-bottom-small">Meet nature</h3>
+                    <p class="features-box__text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium adipisci asperiores,
+                        culpa dolorem eaque
+                </div>
+            </div>
+            <div class="col-1-of-4">
+                <div class="features-box">
+                    <i class="features-box__icon icon-basic-map"></i>
+                    <h3 class="heading-tertiary u-margin-bottom-small">Find you way</h3>
+                    <p class="features-box__text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium adipisci asperiores,
+                        culpa dolorem eaque
+                </div>
+            </div>
+            <div class="col-1-of-4">
+                <div class="features-box">
+                    <i class="features-box__icon icon-basic-heart"></i>
+                    <h3 class="heading-tertiary u-margin-bottom-small">Live a healthire life</h3>
+                    <p class="features-box__text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium adipisci asperiores,
+                        culpa dolorem eaque
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="section-tours">
+        <div class="u-center-text u-margin-bottom-big">
+            <h2 class="heading-secondary">
+                Most popular tours
+            </h2>
+        </div>
+
+        <div class="row">
+            <div class="col-1-of-3">
+                Col 1 of 3
+            </div>
+            <div class="col-1-of-3">
+                Col 1 of 3
+            </div>
+            <div class="col-1-of-3">
+                Col 1 of 3
             </div>
         </div>
     </section>
