--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                             &nbsp;&nbsp;
                         </div>
                         <h4 class="card__heading">
-                           <span class="card__heading-span card__heading-span--1">The Sea Explorer</span>
+                            <span class="card__heading-span card__heading-span--1">The Sea Explorer</span>
                         </h4>
                         <div class="card__details">
                             <ul>
@@ -226,7 +226,9 @@
                 <div class="story__text">
                     <h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family</h3>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda consectetur debitis fuga impedit iusto laborum optio placeat quasi quibusdam. Aliquid assumenda ducimus fuga, incidunt maiores molestias officia quod voluptate?
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda consectetur debitis fuga
+                        impedit iusto laborum optio placeat quasi quibusdam. Aliquid assumenda ducimus fuga, incidunt
+                        maiores molestias officia quod voluptate?
                     </p>
                 </div>
             </div>
@@ -244,7 +246,9 @@
                         WOW!My life is completely diffrent now
                     </h3>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda consectetur debitis fuga impedit iusto laborum optio placeat quasi quibusdam. Aliquid assumenda ducimus fuga, incidunt maiores molestias officia quod voluptate?
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda consectetur debitis fuga
+                        impedit iusto laborum optio placeat quasi quibusdam. Aliquid assumenda ducimus fuga, incidunt
+                        maiores molestias officia quod voluptate?
                     </p>
                 </div>
             </div>
@@ -252,6 +256,29 @@
 
         <div class="u-center-text u-margin-top-huge">
             <a href="#" class="btn-text">Read all stories &rarr;</a>
+        </div>
+    </section>
+    <section class="section-book">
+        <div class="row">
+            <div class="book">
+                <div class="book__form">
+                    <form action="#" class="form">
+                        <div class="u-margin-bottom-medium">
+                            <h2 class="heading-secondary">
+                                Start booking now
+                            </h2>
+                        </div>
+                        <div class="form__group">
+                            <input type="text" class="form__input" placeholder="Full name" required id="name">
+                            <label for="name" class="form__label">Full name</label>
+                        </div>
+                        <div class="form__group">
+                            <input type="email" class="form__input" placeholder="Email address" required id="email">
+                            <label for="email" class="form__label">Email address</label>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
     </section>
 </main>
