--- a/index.html
+++ b/index.html
@@ -276,12 +276,54 @@
                             <input type="email" class="form__input" placeholder="Email address" required id="email">
                             <label for="email" class="form__label">Email address</label>
                         </div>
+                        <div class="form__group u-margin-bottom-medium">
+                            <div class="form__radio-group">
+                                <input type="radio" class="form__radio-input" id="small" name="size">
+                                <label for="small" class="form__radio-label">
+                                    <span class="form__radio-button"></span>
+                                    Small tour group
+                                </label>
+                            </div>
+                            <div class="form__radio-group">
+                                <input type="radio" class="form__radio-input" id="large" name="size">
+                                <label for="large" class="form__radio-label">
+                                    <span class="form__radio-button"></span>
+                                    Large tour group
+                                </label>
+                            </div>
+                        </div>
+                        <div class="form__group">
+                            <button class="btn btn--green">Next Step &rarr;</button>
+                        </div>
                     </form>
                 </div>
             </div>
         </div>
     </section>
 </main>
+<footer class="footer">
+    <div class="footer__logo-box">
+        <img src="img/logo.jpg" alt="Logo" class="footer__logo">
+    </div>
+    <div class="row">
+        <div class="col-1-of-2">
+            <div class="footer-navigation">
+                <ul class="footer__list">
+                    <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">Contact us</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">Carrers</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">Privacy policy</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-1-of-2">
+            <p class="footer__copyright">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aperiam debitis eligendi, est facilis fugit illo incidunt magni molestiae mollitia necessitatibus nemo officia perferendis perspiciatis possimus, quo, repudiandae sed voluptas?
+            </p>
+        </div>
+    </div>
+</footer>
 <!--<section class="gird-test">
     <div class="row">
         <div class="col-1-of-2">
