--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
     </div>
     <div class="row">
         <div class="col-1-of-2">
-            <div class="footer-navigation">
+            <div class="footer__navigation">
                 <ul class="footer__list">
                     <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
                     <li class="footer__item"><a href="#" class="footer__link">Contact us</a></li>
