--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
     <title>Natours</title>
 </head>
 <body>
+<div class="navigation">
+    <input type="checkbox" class="navigation__checkbox" id="navi-toggle" name="navigation">
+    <label for="navi-toggle" class="navigation__button">
+        <span class="navigation__icon">&nbsp;</span>
+    </label>
+    <div class="navigation__background">&nbsp;</div>
+    <nav class="navigation__nav">
+        <ul class="navigation__list">
+            <li class="navigation__item"><a href="#" class="navigation__link"><span>01</span>About Natous</a></li>
+            <li class="navigation__item"><a href="#" class="navigation__link"><span>02</span>Your benfits</a></li>
+            <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span>Popular tours</a></li>
+            <li class="navigation__item"><a href="#" class="navigation__link"><span>04</span>Stories</a></li>
+            <li class="navigation__item"><a href="#" class="navigation__link"><span>05</span>Book now</a></li>
+        </ul>
+    </nav>
+</div>
 <header class="header">
     <div class="header__logo-box">
         <img src="img/logo.jpg" alt="Logo" class="header__logo">
@@ -319,7 +335,9 @@
         </div>
         <div class="col-1-of-2">
             <p class="footer__copyright">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aperiam debitis eligendi, est facilis fugit illo incidunt magni molestiae mollitia necessitatibus nemo officia perferendis perspiciatis possimus, quo, repudiandae sed voluptas?
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aperiam debitis eligendi, est facilis fugit
+                illo incidunt magni molestiae mollitia necessitatibus nemo officia perferendis perspiciatis possimus,
+                quo, repudiandae sed voluptas?
             </p>
         </div>
     </div>
