--- a/index.html
+++ b/index.html
@@ -342,6 +342,26 @@
         </div>
     </div>
 </footer>
+<div class="popup">
+    <div class="popup__content">
+        <div class="popup__left">
+            <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
+            <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
+        </div>
+        <div class="popup__right">
+            <h2 class="heading-secondary u-margin-bottom-medium">
+                Strat booking  now
+            </h2>
+            <h3 class="heading-tertiary u-margin-bottom-small">
+                Important &ndash; Please read these terms before booking
+            </h3>
+            <p class="popup__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos enim eveniet impedit minima officia possimus qui, tempore veritatis. Animi asperiores dolor excepturi id in iusto nemo nesciunt ratione velit veritatis.
+            </p>
+            <a href="#" class="btn btn--green">Book now</a>
+        </div>
+    </div>
+</div>
 <!--<section class="gird-test">
     <div class="row">
         <div class="col-1-of-2">
