--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <span class="heading-primary--main">Outdoors</span>
             <span class="heading-primary--sub">is where life happens</span>
         </h1>
-        <a href="#" class="btn btn--white btn--animated">discover our tour</a>
+        <a href="#section-tours" class="btn btn--white btn--animated">discover our tour</a>
     </div>
 </header>
 <main>
@@ -115,7 +115,7 @@
             </div>
         </div>
     </section>
-    <section class="section-tours">
+    <section class="section-tours" id="section-tours">
         <div class="u-center-text u-margin-bottom-big">
             <h2 class="heading-secondary">
                 Most popular tours
@@ -148,7 +148,7 @@
                                 <p class="card__price-only">Only</p>
                                 <p class="card__price-value">$297</p>
                             </div>
-                            <a href="" class="btn btn--white">Book now</a>
+                            <a href="#popup" class="btn btn--white">Book now</a>
                         </div>
                     </div>
                 </div>
@@ -178,7 +178,7 @@
                                 <p class="card__price-only">Only</p>
                                 <p class="card__price-value">$497</p>
                             </div>
-                            <a href="" class="btn btn--white">Book now</a>
+                            <a href="#popup" class="btn btn--white">Book now</a>
                         </div>
                     </div>
                 </div>
@@ -208,7 +208,7 @@
                                 <p class="card__price-only">Only</p>
                                 <p class="card__price-value">$897</p>
                             </div>
-                            <a href="" class="btn btn--white">Book now</a>
+                            <a href="#popup" class="btn btn--white">Book now</a>
                         </div>
                     </div>
                 </div>
@@ -342,13 +342,14 @@
         </div>
     </div>
 </footer>
-<div class="popup">
+<div class="popup" id="popup">
     <div class="popup__content">
         <div class="popup__left">
             <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
             <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
         </div>
         <div class="popup__right">
+            <a href="#section-tours" class="popup__close">&times;</a>
             <h2 class="heading-secondary u-margin-bottom-medium">
                 Strat booking  now
             </h2>
